--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-dglke==0.1.0
-ogb
-scikit-learn
-scipy
-tqdm
+dgl==1.1.3
+joblib==1.3.2
+numpy==1.26.4
+ogb==1.3.6
+scikit_learn==1.3.2
+scipy==1.12.0
+torch==1.13.1+cu117
+torch_sparse==0.6.18
+tqdm==4.66.1
+util==0.0.1
